; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mpt/extr_mpt.c_mpt_wait_db_ack.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mpt/extr_mpt.c_mpt_wait_db_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpt_softc = type { i32 }

@MPT_MAX_WAIT = common dso_local global i32 0, align 4
@maxwait_ack = common dso_local global i32 0, align 4
@MPT_OK = common dso_local global i32 0, align 4
@MPT_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mpt_softc*)* @mpt_wait_db_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpt_wait_db_ack(%struct.mpt_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mpt_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.mpt_softc* %0, %struct.mpt_softc** %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %27, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @MPT_MAX_WAIT, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %30

9:                                                ; preds = %5
  %10 = load %struct.mpt_softc*, %struct.mpt_softc** %3, align 8
  %11 = call i32 @mpt_rd_intr(%struct.mpt_softc* %10)
  %12 = call i32 @MPT_DB_IS_BUSY(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %25, label %14

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @maxwait_ack, align 4
  %17 = icmp sgt i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* %4, align 4
  br label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @maxwait_ack, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = phi i32 [ %19, %18 ], [ %21, %20 ]
  store i32 %23, i32* @maxwait_ack, align 4
  %24 = load i32, i32* @MPT_OK, align 4
  store i32 %24, i32* %2, align 4
  br label %32

25:                                               ; preds = %9
  %26 = call i32 @DELAY(i32 200)
  br label %27

27:                                               ; preds = %25
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %4, align 4
  br label %5

30:                                               ; preds = %5
  %31 = load i32, i32* @MPT_FAIL, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %22
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @MPT_DB_IS_BUSY(i32) #1

declare dso_local i32 @mpt_rd_intr(%struct.mpt_softc*) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
